[package]
authors = ["Julian Weiss <weiss_julian@outlook.de"]
description = "Linux SocketCAN library."
documentation = "https://docs.rs/socketcan2"
repository = "https://github.com/xR3b0rn/socketcan2-rs"
license = "MIT"
name = "socketcan2"
version = "0.1.4"
edition = "2021"

[dependencies]
libc = "0.2.137"
chrono = "0.4.23"
